# quick-look

./: .gitignore  LICENSE  README.md  pyproject.toml
pixi/: pixi.toml
quick_look/: __init__.py  inspect.py  ngff_metadata.py  path_configs.py  preview_slide.py  process.py  run.py  tile.py  util.py  watcher.py
quick_look/.dev/: demo-ome-zarr.py
