[tool.poetry]
name = "quick-look"
version = "2025.11.2"
description = "Preview whole-slide scans with NGFF and Napari"
authors = ["Yu-An Chen <atwood12@gmail.com>"]
readme = "README.md"
packages = [{include = "quick_look"}]
repository = "https://github.com/Yu-AnChen/quick-look"
homepage = "https://pypi.org/project/quick-look"
keywords = [
    "microscopy",
    "whole-slide imaging",
    "pathology",
    "spatial biology"
]

[tool.poetry.dependencies]
python = ">=3.10"
ashlar = "*"
ome-zarr = "^0.8.1"
fire = ">=0.5.0"
tqdm = "*"
joblib = "<1.5"
watchdog = "*"
ome-types = ">=0.6"
pywin32 = { version = ">=311, <312", markers = "sys_platform == 'win32'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quicklook = "quick_look.run:main"